2021-11-18  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (dwfl_proc_attach_LDFLAGS): Add -rdynamic.

2021-11-11  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-000-permission.sh: Don't set DEBUGINFOD_TIMEOUT.
	* run-debuginfod-archive-groom.sh: Likewise.
	* run-debuginfod-archive-rename.sh: Likewise.
	* run-debuginfod-archive-test.sh: Likewise.
	* run-debuginfod-artifact-running.sh: Likewise.
	* run-debuginfod-dlopen.sh: Likewise.
	* run-debuginfod-extraction.sh: Likewise.
	* run-debuginfod-federation-link.sh: Likewise.
	* run-debuginfod-federation-metrics.sh: Likewise.
	* run-debuginfod-federation-sqlite.sh: Likewise.
	* run-debuginfod-malformed.sh: Likewise.
	* run-debuginfod-tmp-home.sh: Likewise.
	* run-debuginfod-writable.sh: Likewise.

2021-11-05  Frank Ch. Eigler  <fche@redhat.com>

	PR28430
	* run-debuginfod-extraction-passive.sh: New test.
	* Makefile.am (TESTS, EXTRA_DIST): Add it.

2021-10-20  John M Mellor-Crummey  <johnmc@rice.edu>

	* nvidia_extended_linemap_libdw.c: New file.
	* run-nvidia-extended-linemap-libdw.sh: New test.
	* run-nvidia-extended-linemap-readelf.sh: Likewise.
	* testfile_nvidia_linemap.bz2: New test file.
	* .gitignore: Add nvidia_extended_linemap_libdw.
	* Makefile.am (check_PROGRAMS): Add nvidia_extended_linemap_libdw.
	(TESTS): Add run-nvidia-extended-linemap-libdw.sh and
	run-nvidia-extended-linemap-readelf.sh
	(EXTRA_DIST): Likewise and testfile_nvidia_linemap.bz2.
	(nvidia_extended_linemap_libdw_LDADD): New variable.

2021-11-08  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (TESTS): Add run-readelf-fat-lto.sh.
	(EXTRA_DIST): Add run-readelf-fat-lto.sh and
	testfile-dwarf5-fat-lto.o.bz2.
	* run-readelf-fat-lto.sh: New test.
	* testfile-dwarf5-fat-lto.o.bz2: New test file.

2021-11-04  Frank Ch. Eigler  <fche@redhat.com>

	PR28514
	* run-debuginfod-archive-groom.sh: Look for new groom metric.

2021-10-23  Frank Ch. Eigler  <fche@redhat.com>

	PR28240
	* run-debuginfod-000-permission.sh, -writable.sh: