@@ -1,3 +1,13 @@
+2021-12-04  Mark Wielaard  <mark@klomp.org>
+
+	* varlocs.c (dwarf_encoding_string): Return "<unknown encoding>" instead
+	of NULL.
+	(dwarf_tag_string): Return "<unknown tag>" instead of NULL.
+	(dwarf_attr_string): Return "<unknown attr>" instead of NULL.
+	(dwarf_form_string): Return "<unknown form>" instead of NULL.
+	(dwarf_opcode_string): Return "<unknown opcode>" instead of NULL.
+	(print_expr): Remove assert.
+
 2021-11-18  Mark Wielaard  <mark@klomp.org>
 
 	* Makefile.am (dwfl_proc_attach_LDFLAGS): Add -rdynamic.
